--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ trunk/landing/images/
 trunk/errors/local.xml
 trunk/app/etc/local.xml
 trunk/sitemap.xml
+trunk/tmp
+trunk/tmp/*
 
  
 trunk/downloader/.cache
